Fixes nav on small screens

--- a/client/stylesheets/footer.import.styl
+++ b/client/stylesheets/footer.import.styl
@@ -5,35 +5,41 @@ footer
   h2
     margin 0
  
+.footer
+  width 600px
+  margin 0 auto
+
 .logo
-  display inline-block
-  vertical-align middle
+  margin 0 15px
   p
     display inline-block
     color l-gray
     font-size 11px   
 
 .mantle
-  display inline-block
+  float left
   h1
     bg('images/mantle-logo', 130px, 32px,'png')
     centerSmall(10px)
-    opacity .9
 
 .eha
   float right
-  margin-top 5px
+  margin-top 8px
   h2
     bg('images/eha-logo', 220px, 54px,'png')
     centerSmall()
-    transition()
-    opacity .9
-    &:hover
-      opacity 1
-      transition()
       
 @media (max-width: 765px)
+  .footer
+    width 100%
   .logo
     margin 0 auto
     text-align center
-    margin-bottom 20px
+  .mantle,
+  .eha
+    float none
+    h1,
+    h2
+      margin 0 auto
+    h1
+      margin-bottom 30px
