--- a/client/stylesheets/mixins.import.styl
+++ b/client/stylesheets/mixins.import.styl
@@ -1,3 +1,7 @@
+inlineMiddle()
+  display inline-block
+  vertical-align middle
+
 addFont(fontTitle, allTypes = true, type = '')
   @font-face
     if allTypes
